# vigicrues

./: Cargo.toml  LICENSE  structure.sql
cli/: Cargo.toml
cli/src/: main.rs
src/: lib.rs
